# WritingAssisstant

./: IMPLEMENTATION_NOTES.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  errors.rs  keyboard.rs  lib.rs  main.rs  model_settings.rs  openai.rs  secure_store.rs  window_state.rs
src/components/: DiffSection.tsx  ModelSettingsPanel.tsx  Popup.tsx  SettingsPanel.tsx  TokenRenderer.tsx
src/lib/: diffTokens.ts  textReconstruction.ts
src/tests/: diffTokens.test.ts  textReconstruction.test.ts
src/types/: diff.ts  model.ts  tauri.ts
