[package]
name = "privacy-text-assistant"
version = "0.1.0"
description = "Privacy-first corporate writing assistant"
authors = ["PrivacyTextAssistant"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "privacy_text_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "PrivacyTextAssistant"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arboard = "3.4"
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4", "serde"] }
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[dev-dependencies]
httpmock = "0.7"
